logs/Write_data_to_PG/python_task/2020-11-26T08:45:00+00:00/1.log
[2020-11-26 14:20:04,430] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_PG.python_task 2020-11-26T08:45:00+00:00 [queued]>
[2020-11-26 14:20:04,452] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_PG.python_task 2020-11-26T08:45:00+00:00 [queued]>
[2020-11-26 14:20:04,452] {taskinstance.py:880} INFO - 
--------------------------------------------------------------------------------
[2020-11-26 14:20:04,452] {taskinstance.py:881} INFO - Starting attempt 1 of 1
[2020-11-26 14:20:04,452] {taskinstance.py:882} INFO - 
--------------------------------------------------------------------------------
[2020-11-26 14:20:04,464] {taskinstance.py:901} INFO - Executing <Task(PythonOperator): python_task> on 2020-11-26T08:45:00+00:00
[2020-11-26 14:20:04,466] {standard_task_runner.py:54} INFO - Started process 19428 to run task
[2020-11-26 14:20:04,486] {standard_task_runner.py:77} INFO - Running: ['airflow', 'run', 'Write_data_to_PG', 'python_task', '2020-11-26T08:45:00+00:00', '--job_id', '6', '--pool', 'default_pool', '--raw', '-sd', 'DAGS_FOLDER/sampledag.py', '--cfg_path', '/var/folders/ff/pqhf5klx0msdsn3m1cnq4cxr0000gn/T/tmp50zyn10m']
[2020-11-26 14:20:04,489] {standard_task_runner.py:78} INFO - Job 6: Subtask python_task
[2020-11-26 14:20:04,539] {logging_mixin.py:112} INFO - Running %s on host %s <TaskInstance: Write_data_to_PG.python_task 2020-11-26T08:45:00+00:00 [running]> 47.43.168.192.in-addr.arpa
[2020-11-26 14:20:04,569] {logging_mixin.py:112} INFO - Creating table in database.
[2020-11-26 14:20:04,576] {taskinstance.py:1150} ERROR - syntax error at or near "uuid"
LINE 1: INSERT INTO users VALUES uuid.uuid4().int % 123456789, datet...
                                 ^
Traceback (most recent call last):
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 984, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 113, in execute
    return_value = self.execute_callable()
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 118, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/Users/yudi/airflow/dags/sampledag.py", line 57, in my_func
    cur.execute(insert_query)
psycopg2.errors.SyntaxError: syntax error at or near "uuid"
LINE 1: INSERT INTO users VALUES uuid.uuid4().int % 123456789, datet...
                                 ^

[2020-11-26 14:20:04,580] {taskinstance.py:1194} INFO - Marking task as FAILED. dag_id=Write_data_to_PG, task_id=python_task, execution_date=20201126T084500, start_date=20201126T085004, end_date=20201126T085004
[2020-11-26 14:20:09,428] {local_task_job.py:102} INFO - Task exited with return code 1
